# snaze-project

./: .clang-format  .clang-tidy  CMakeLists.txt  README.md  levels.tgz  txtfoda.txt
assets/: level_horizontal_backdor.data
conf/: snaze_config.ini
docs/: Doxyfile
lib/: ini_file_parser.cpp  terminal_utils.cpp  utils.cpp
lib/include/: ini_file_parser.h  terminal_utils.h  utils.hpp
src/: game_manager.cpp  game_manager_utils.cpp  main.cpp  maze.cpp  snake.cpp
src/include/: color.h  game_manager.hpp  ini_file_parser.h  maze.hpp  snake.hpp
tests/: center_text.cpp  kb_motions.cpp
